--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Let’s Nach 2016 Charity Fundraising Dinner & Dance Event">
+    <meta name="description" content="Mount Sinai Hospital">
+    <meta name="author" content="ting-y">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>Let’s Nach</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
