add sponsors section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#sponsors">Sponsors</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -130,13 +133,57 @@
                     <h3 class="text-muted" data-wp-template="content"></h3>
                 </div>
             </div>
+            <div class="row" data-wp-element="posts" data-wp-options="category=organizations" data-wp-layout="list">
+                <div class="col-md-4 col-sm-6">
+                    <a data-wp-template="title">
+                        <img class="img-responsive img-centered" data-wp-template="featured_image">
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
- 
+    <!-- Sponsors Section --> 
+   <section id="sponsors" class="bg-light-gray" data-wp-source="https://public-api.wordpress.com/rest/v1.1/sites/letsnach.wordpress.com">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading" data-wp-template="title">Sponsors</h2>
+                </div>
+            </div>
+            <div class="row" data-wp-element="posts" data-wp-options="category=row1" data-wp-layout="list">
+                <div class="col-md-4 col-sm-6">
+                    <a data-wp-template="title">
+                        <img class="img-responsive img-centered" data-wp-template="featured_image">
+                    </a>
+                </div>
+            </div>
+            <div class="row" data-wp-element="posts" data-wp-options="category=row2" data-wp-layout="list">
+                <div class="col-md-4 col-sm-6">
+                    <a data-wp-template="title">
+                        <img class="img-responsive img-centered" data-wp-template="featured_image">
+                    </a>
+                </div>
+            </div>
+            <div class="row" data-wp-element="posts" data-wp-options="category=row3" data-wp-layout="list">
+                <div class="col-md-4 col-sm-6">
+                    <a data-wp-template="title">
+                        <img class="img-responsive img-centered" data-wp-template="featured_image">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Clients Aside -->
+    <!--
     <aside class="clients">
         <div class="container" data-wp-source="https://public-api.wordpress.com/rest/v1.1/sites/letsnach.wordpress.com">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading" data-wp-template="title">Organizers</h2>
+                </div>
+            </div>
             <div class="row" data-wp-element="posts" data-wp-options="category=organizations" data-wp-layout="list">
                 <div class="col-md-4 col-sm-6">
                     <a data-wp-template="title">
@@ -146,8 +193,7 @@
             </div>
         </div>
     </aside>
-    
-
+    -->
 
     <footer>
         <div class="container">
