--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Let’s Nach 2016 Charity Fundraising Dinner & Dance Event">
-    <meta name="description" content="Mount Sinai Hospital">
-    <meta name="author" content="ting-y">
+    <meta name="description" content="Let’s Nach 2016 Charity Fundraising Dinner & Dance Event - Mount Sinai Hospital’s Campaign for Women’s and Infants’ Health">
+    <meta name="author" content="@username_ting and @hectorjarquin">
 
     <title>Let’s Nach</title>
 
